--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fontsource/inter": "^5.1.1",
+    "@vercel/analytics": "^1.5.0",
     "lucide-react": "^0.475.0",
     "next": "15.1.4",
     "react": "^19.0.0",
