--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@fontsource/inter": "^5.1.1",
+    "@shadcn/ui": "^0.0.4",
+    "@tsparticles/engine": "^3.8.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.8.1",
     "@vercel/analytics": "^1.5.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.475.0",
@@ -18,6 +22,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "simplex-noise": "^4.0.3",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
